# kronoterm_cloud_api

./: .gitignore  README.md  build.bat  build_local.bat  build_release.bat  dev_requirements.txt  prod_requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  codeql.yml  ruff.yml  tests.yml
docs/: kronoterm_cloud_api_docs.md
kronoterm_cloud_api/: client.py  kronoterm_cloud_api.py  kronoterm_enums.py
kronoterm_cloud_api/util/: logz.py
src/: hp_enums.py  kronoterm_cloud_api.py  kronoterm_enums.py
src/kronoterm_cloud_api/: kronoterm_cloud_api.py
src/kronoterm_cloud_api/enums/: hp_enums.py
src/util/: __init__.py  logz.py
tests/: conftest.py  test_live_device.py  test_login.py  test_set_heat_pump.py
