[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kronoterm-cloud-api"
version = "0.0.2"
readme = "README.md"
description = "API for Kronoterm heat pumps cloud"
authors = [{name = "Matevž", email = "matevzlesko@gmail.com"},]


license = {file = "LICENSE"}

requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.3",
    "cachetools>=5.4.0"
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LeskoIam/kronoterm_cloud_api"
Issues = "https://github.com/LeskoIam/kronoterm_cloud_api/issues"


[tool.ruff]
target-version = "py312"
line-length = 121
indent-width = 4

# Exclude files
extend-exclude = ["setup.py"]

[tool.ruff.lint]
# select = ["ALL"]
select = [
    # pycodestyle errors
    "E",
    # pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8-naming
    "N",
    # mccabe
    "C901",
    # pydocstyle
    "D",
    # flake8-pytest-style
    "PT"
]

ignore = [
    # Missing docstring in public module
    "D100",
    # Missing docstring in public class
    "D101",
    # Missing docstring in public package
    "D104",
    # Missing docstring in magic method
    "D105",
    # No blank lines allowed after function docstring
    "D202",
    # 1 blank line required before class docstring
    "D203",
    # 1 blank line required between summary line and description
    "D205",
    # Multi-line docstring summary should start at the second line
    "D213",
    # First line should end with a period
    "D400",
    # First line of docstring should be in imperative mood
    "D401",
    #  Multi-line docstring summary should start at the first line
    "D212",
    # First line should end with a period, question mark, or exclamation point
    "D415",
    # Missing blank line after last section
    "D413",
    # Missing dashed underline after section
    "D407",
    # Section name should end with a newline
    "D406",
    # Unnecessary open mode parameters (explicit is better than implicit)
    "UP015",
    # Local variable is assigned to but never used
    "F841",
    # Use context handler for opening files
    "SIM115",
    # `scope='function'` is implied in `@pytest.fixture()`
    "PT003",
    # Exception should be named with an Error suffix
    "N818"

]

# Avoid trying to fix flake8-bugbear (`B`) violations
unfixable = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
